[project]
name = "merkle-trees"
version = "0.1.0"
description = "Simple MerkleTrees implementation in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pillow>=12.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["image_diff_viewer"]
